# kyrcovay_three

./: .gitignore  config.py  database.ini_example  main.py  pyproject.toml  queries.sql
database/: db_manager.py  hh_vacancies.py  utils.py
src/: database.py  db_manager.py  hh_api.py  schema.py
tests/: test_db_manager.py  test_hh_api.py  test_schema.py
